<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="media3_error_message">出了点小问题，请稍后重试</string>
    <string name="media3_player_retry">"  重 试  "</string>
    <string name="media3_buffering_message">正在打开媒体文件..</string>
    <string name="media3_select_episode">选集</string>
    <string name="media3_select_subtitles">选择字幕</string>
    <string name="media3_select_audio_track">选择音轨</string>
    <string name="media3_select_scale_mode">缩放方式</string>
    <string name="media3_screen_rotation">旋转屏幕</string>
    <string name="media3_play_or_pause">播放或暂停</string>
    <string name="media3_next_episode">下一集</string>
    <string name="media3_00_00">00:00</string>
    <string name="media3_lock_and_unlock">锁定/解锁</string>
    <string name="media3_slide_volume">音量 (%d) %%</string>
    <string name="media3_slide_brightness">亮度 (%d) %%</string>
    <string name="media3_slide_position">进度 (%s / %s)</string>
    <string name="media3_on_buffing_media">正在缓冲媒体文件..</string>
    <string name="media3_on_opening_media">正在打开媒体文件..</string>
    <string name="media3_double_speed_playing">×%.1f 倍速播放</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="media3_select_play_speed">倍速播放</string>
    <string name="media3_player_replay">重新播放</string>
    <string name="media3_completion_message">媒体文件已全部播放完毕</string>
    <string name="seek_back_10_seconds">后退10秒</string>
    <string name="seek_forward_10_seconds">前进10秒</string>
</resources>