<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <FrameLayout
        android:id="@+id/root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <androidx.media3.ui.AspectRatioFrameLayout
            android:id="@+id/media3_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/media3_iv_holder_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="gone"
                tools:src="@drawable/media3_test_video_content"
                tools:visibility="visible" />

            <androidx.media3.ui.SubtitleView
                android:id="@+id/media3_subtitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.media3.ui.AspectRatioFrameLayout>

        <com.jason.cloud.media3.widget.Media3GestureView
            android:id="@+id/gesture_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.jason.cloud.media3.widget.Media3PlayerControlView
            android:id="@+id/media3_control_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/media3_error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/media3_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/media3_error_message"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/media3_error_status_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_media3_player_status_view_btn"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingTop="4dp"
                android:paddingRight="18dp"
                android:paddingBottom="4dp"
                android:text="@string/media3_player_retry"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/media3_completion_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/media3_completion_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/media3_completion_message"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/media3_completion_status_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_media3_player_status_view_btn"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingTop="4dp"
                android:paddingRight="18dp"
                android:paddingBottom="4dp"
                android:text="@string/media3_player_replay"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/media3_buffering_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/media3_buffering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:progress="20"
                app:indicatorColor="@color/colorSecondary"
                app:indicatorSize="30dp"
                app:trackColor="#36FFFFFF"
                app:trackCornerRadius="50dp"
                app:trackThickness="3dp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/media3_buffering_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/media3_buffering_message"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/media3_slide_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/media3_indicator_slide_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                app:indicatorColor="@color/colorSecondary"
                app:indicatorSize="30dp"
                app:trackColor="#36FFFFFF"
                app:trackCornerRadius="50dp"
                app:trackThickness="3dp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/media3_tv_slide_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/media3_slide_volume"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/media3_double_click_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <FrameLayout
                android:id="@+id/media3_double_click_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.jason.cloud.media3.widget.HalfCircleView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="1"
                    android:text="@string/seek_back_10_seconds"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </FrameLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <FrameLayout
                android:id="@+id/media3_double_click_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.jason.cloud.media3.widget.HalfCircleView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:rotation="180" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="1"
                    android:text="@string/seek_forward_10_seconds"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/media3_slide_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/media3_indicator_slide_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                app:indicatorColor="@color/colorSecondary"
                app:indicatorSize="30dp"
                app:trackColor="#36FFFFFF"
                app:trackCornerRadius="50dp"
                app:trackThickness="3dp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/media3_tv_slide_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/media3_slide_brightness"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/media3_slide_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/media3_indicator_slide_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                app:indicatorColor="@color/colorSecondary"
                app:indicatorSize="30dp"
                app:trackColor="#36FFFFFF"
                app:trackCornerRadius="50dp"
                app:trackThickness="3dp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/media3_tv_slide_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/media3_slide_position"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/media3_double_speed_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="1"
            android:text="@string/media3_double_speed_playing"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:drawableLeftCompat="@drawable/ic_media3_round_electric_bolt_14"
            app:drawableTint="@color/colorSecondary"
            tools:visibility="gone" />
    </FrameLayout>
</FrameLayout>